@@ -3,7 +3,7 @@ MapBorderRenderer,5,org.lazywizard.radar.renderers.combat.MapBorderRenderer,data
 RadarBoxRenderer,10,org.lazywizard.radar.renderers.combat.RadarBoxRenderer,data/config/radar/radar_settings.json
 BattleProgressRenderer,20,org.lazywizard.radar.renderers.combat.BattleProgressRenderer,data/config/radar/radar_settings.json
 CombatReadinessRenderer,30,org.lazywizard.radar.renderers.combat.CombatReadinessRenderer,data/config/radar/radar_settings.json
-ShipRenderer,40,org.lazywizard.radar.renderers.combat.ShipRenderer,data/config/radar/radar_settings.json
-AsteroidRenderer,50,org.lazywizard.radar.renderers.combat.AsteroidRenderer,data/config/radar/radar_settings.json
-MissileRenderer,60,org.lazywizard.radar.renderers.combat.MissileRenderer,data/config/radar/radar_settings.json
-ObjectiveRenderer,70,org.lazywizard.radar.renderers.combat.ObjectiveRenderer,data/config/radar/radar_settings.json
+ObjectiveRenderer,40,org.lazywizard.radar.renderers.combat.ObjectiveRenderer,data/config/radar/radar_settings.json
+ShipRenderer,50,org.lazywizard.radar.renderers.combat.ShipRenderer,data/config/radar/radar_settings.json
+AsteroidRenderer,60,org.lazywizard.radar.renderers.combat.AsteroidRenderer,data/config/radar/radar_settings.json
+MissileRenderer,70,org.lazywizard.radar.renderers.combat.MissileRenderer,data/config/radar/radar_settings.json
